# 3dlite

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENCE  LICENCE.3drpaty  LICENCE.3rdparty  README.md  appveyor.yml  build_win_2022.bat  update  vcpkg-configuration.json  vcpkg.json
3dlite/: CMakeLists.txt
3dlite/src/: 3dlite_7z_loader.c  3dlite_7zloader.c  3dlite_alloc.c  3dlite_assimp_loader.c  3dlite_camera.c  3dlite_composite_scene.c  3dlite_file_cache.c  3dlite_framebuffer.c  3dlite_gl_texture_unit.c  3dlite_list.c  3dlite_logger.c  3dlite_m_codec.c  3dlite_main.c  3dlite_malloc.c.h  3dlite_material.c  3dlite_mesh.c  3dlite_mesh_loader.c  3dlite_mesh_node.c  3dlite_meshes_render.c  3dlite_misc.c  3dlite_nedmalloc.c  3dlite_pack.c  3dlite_rb_tree.c  3dlite_render.c  3dlite_resource_pack.c  3dlite_scene.c  3dlite_scene_node.c  3dlite_shader.c  3dlite_shader_params.c  3dlite_shader_program.c  3dlite_texture_unit.c  3dlite_timer.c  3dlite_vao.c  3dlite_vbo.c  3dlite_vbo_loader.c  3dlite_video.c  7zloader.c  alloc.c  file_cache.c  filepack.c  (+5 more)
3dlitepp/: CMakeLists.txt
3dlitepp/src/: 3dlitepp_as_main.cpp  3dlitepp_camera.cpp  3dlitepp_json_helper.cpp  3dlitepp_main.cpp  3dlitepp_manageable.cpp  3dlitepp_material.cpp  3dlitepp_mesh.cpp  3dlitepp_render_target.cpp  3dlitepp_resource.cpp  3dlitepp_resource_manager.cpp  3dlitepp_resource_pack_manager.cpp  3dlitepp_scene.cpp  3dlitepp_scene_node.cpp  3dlitepp_scene_object.cpp  3dlitepp_script.cpp  3dlitepp_script_dispatcher.cpp  3dlitepp_script_log.cpp  3dlitepp_script_manager.cpp  3dlitepp_script_mat3.cpp  3dlitepp_script_mat4.cpp  3dlitepp_script_quat.cpp  3dlitepp_script_types.cpp  3dlitepp_script_vec3.cpp  3dlitepp_script_vec4.cpp  3dlitepp_shader_program.cpp  3dlitepp_texture.cpp
lite3d/: CMakeLists.txt
lite3d/src/: lite3d_7z_loader.c  lite3d_alloc.c  lite3d_array.c  lite3d_buffers_manip.c  lite3d_camera.c  lite3d_dbg.c  lite3d_framebuffer.c  lite3d_frustum.c  lite3d_glext.c  lite3d_list.c  lite3d_logger.c  lite3d_m_codec.c  lite3d_main.c  lite3d_malloc.c.h  lite3d_material.c  lite3d_mesh.c  lite3d_mesh_assimp_loader.c  lite3d_mesh_codec.c  lite3d_mesh_loader.c  lite3d_metrics.c  lite3d_misc.c  lite3d_nedmalloc.c  lite3d_pack.c  lite3d_query.c  lite3d_rb_tree.c  lite3d_render.c  lite3d_scene.c  lite3d_scene_node.c  lite3d_shader.c  lite3d_shader_params.c  lite3d_shader_program.c  lite3d_tbo.c  lite3d_texture_dds.c  lite3d_texture_unit.c  lite3d_timer.c  lite3d_vao.c  lite3d_vbo.c  lite3d_video.c
lite3dpp/: CMakeLists.txt
lite3dpp/src/: lite3dpp_action.cpp  lite3dpp_action_clip.cpp  lite3dpp_buffer_base.cpp  lite3dpp_buffer_mapper.cpp  lite3dpp_camera.cpp  lite3dpp_compute_shader.cpp  lite3dpp_config_reader.cpp  lite3dpp_config_writer.cpp  lite3dpp_json_helper.cpp  lite3dpp_light_source.cpp  lite3dpp_main.cpp  lite3dpp_manageable.cpp  lite3dpp_material.cpp  lite3dpp_material_factory.cpp  lite3dpp_material_multi_render.cpp  lite3dpp_material_pbr.cpp  lite3dpp_mesh.cpp  lite3dpp_mesh_partition.cpp  lite3dpp_render_target.cpp  lite3dpp_resource.cpp  lite3dpp_resource_manager.cpp  lite3dpp_scene.cpp  lite3dpp_scene_light_node.cpp  lite3dpp_scene_mesh_node.cpp  lite3dpp_scene_node.cpp  lite3dpp_scene_node_base.cpp  lite3dpp_scene_object.cpp  lite3dpp_scene_object_base.cpp  lite3dpp_script.cpp  lite3dpp_script_as.cpp  lite3dpp_script_dispatcher.cpp  lite3dpp_script_log.cpp  lite3dpp_script_mat3.cpp  lite3dpp_script_mat4.cpp  lite3dpp_script_quat.cpp  lite3dpp_script_types.cpp  lite3dpp_script_vec3.cpp  lite3dpp_script_vec4.cpp  lite3dpp_shader_params.cpp  lite3dpp_shader_program.cpp  (+9 more)
lite3dpp_font/: CMakeLists.txt
lite3dpp_font/include/: font.h  mathlib.h  pos2d.h  rect.h  texture.h  utf8.h  utils.h
lite3dpp_font/src/: font.cpp  lite3dpp_font_texture.cpp  mathlib.cpp  texture.cpp  utils.cpp
lite3dpp_physics/: CMakeLists.txt
lite3dpp_physics/src/: lite3dpp_physics_collision_shape_manager.cpp  lite3dpp_physics_motion_state.cpp  lite3dpp_physics_scene.cpp  lite3dpp_physics_scene_node.cpp  lite3dpp_physics_scene_rigid_body_object.cpp
samples/: 3dlite_sample_mesh_node.c  3dlite_sample_minigun.c  3dlite_sample_render_to_texture.c  3dlite_sample_rifle.c  3dlite_sample_scene_node.c  CMakeLists.txt  README.md
samples/sample_animation/: lite3dpp_animation.cpp
samples/sample_camera/: lite3dpp_main.cpp
samples/sample_cellwallerkiller/: lite3dpp_cellwallerkiller.cpp
samples/sample_common/: CMakeLists.txt  lite3d_builtin_shaders.h  lite3dpp_common.cpp  lite3dpp_common.h
samples/sample_deferred_shading/: lite3dpp_main.cpp
samples/sample_deffered_shading/: lite3dpp_main.cpp
samples/sample_dynamic_cube/: lite3dpp_dynamic_cube.cpp
samples/sample_minigun/: 3dlite_sample_minigun.c  lite3d_sample_minigun.c
samples/sample_objects/: 3dlitepp_sample_objects.cpp  lite3dpp_sample_objects.cpp
samples/sample_physics/: lite3dpp_base.cpp  lite3dpp_base.h  lite3dpp_main.cpp  lite3dpp_objects.cpp  lite3dpp_objects.h  lite3dpp_physics_common.h  lite3dpp_physics_motion_state.cpp  lite3dpp_physics_motion_state.h  lite3dpp_physics_scene.cpp  lite3dpp_physics_scene.h  lite3dpp_physics_scene_node.cpp  lite3dpp_physics_scene_node.h  lite3dpp_physics_scene_rigid_body_object.cpp  lite3dpp_physics_scene_rigid_body_object.h
samples/sample_piston/: lite3dpp_piston.cpp
samples/sample_reflection_sky/: lite3dpp_reflection_sky.cpp
samples/sample_rifle/: 3dlite_sample_rifle.c  lite3d_sample_rifle.c
samples/sample_rtt/: 3dlite_sample_rtt.c  lite3d_sample_rtt.c
samples/sample_rtt2/: lite3dpp_render_color_to_texture.cpp
samples/sample_sandbox/: lite3dpp_main.cpp
samples/sample_scene_node/: 3dlite_sample_scene_node.c  lite3d_sample_scene_node.c
samples/sample_script/: 3dlitepp_sample_script.cpp  lite3dpp_sample_script.cpp
samples/sample_sponza_remaster/: lite3dpp_main.cpp
samples/sample_sponzahall/: lite3dpp_main.cpp  lite3dpp_sponza.cpp
samples/sample_starfield/: lite3dpp_main.cpp
samples/sample_texture_modify/: lite3dpp_texture_modify.cpp
samples/sample_vault/: lite3dpp_vault.cpp  (+4 more)
tests/: CMakeLists.txt
(+1813 files in other folders)
